# jilin-ai

./: .gitignore  .gitlab-ci.yml  CNAME  README.md  app.py  build.py  jilin-ai.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: HXTII-usage.md  project-frame.md  wiki-frame.md
scripts/: Convert-MarkdownToHtml.ps1  advanced_converter.py  build_search_index.py  conversion_config.yaml  conversion_mapping.json  convert_md_to_html.py  test_document.md
scripts/test_output/: description.html  engineering.html  results.html
static/: cur_dna_32.cur  cur_trna_32.cur  search-index.json  site-search.js  style.css  table-of-contents.js  theme-toggle.js
static/HXTII/css/: HXTII.css  bamboo.css  common.css
static/HXTII/js/: HXTII.js  HXTII.old.js
static/css/: README.md  animations.css  attributions.css  base.css  bootstrap.min.css  components.css  google-fonts.css  layout.css  members.css  navbar.css  style.css.backup
static/js/: attributions.js  dropdown-nav.js  members.js
static/wiki/: description.js  human-practices.js
wiki/: footer.html  layout.html  menu.html
wiki/pages/: attributions.html  awards.html  collaboration.html  contribution.html  datasets.html  description.html  engineering.html  evaluation.html  experiments.html  hardware.html  home.html  human-practices.html  implementation.html  members.html  methodology.html  model.html  notebook.html  overview.html  results.html  safety-and-security.html  software.html  timeline.html  training.html
wiki/pages/ignore/: education.html
